<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Pocket CTC</string>
    <string name="hint_input_chinese">Enter Chinese</string>
    <string name="hint_input_telephony">Enter telephony code</string>

    <string name="title_language">Language</string>
    <string name="title_settings">Settings</string>
    <string name="title_about">About</string>
    <string name="title_privacy">Privacy policy</string>

    <string name="lang_simplified">Simplified Chinese</string>
    <string name="lang_traditional">Traditional Chinese</string>
    <string name="lang_chinese">Chinese</string>
    <string name="lang_telephony">Telephony</string>

    <string name="code_simplified" translatable="false">zh-Hans</string>
    <string name="code_traditional" translatable="false">zh-Hant</string>

    <string name="desc_switcher">Switch input and output</string>

    <string name="app_copyright_info" translatable="false">
    Copyright 2016 Matthew Mikolay.
    All rights reserved.

    github.com/mattmikolay/pocket-ctc
    </string>

    <string name="about_version" translatable="false">Version %1$s</string>

    <string name="app_gnu_notice" translatable="false">
    Pocket CTC is licensed under the GNU General Public License v3.0:
    </string>

    <string name="app_unicode_notice" translatable="false">
    Pocket CTC makes use of data from the Unihan Database, which is provided by
    Unicode, Inc. Unicode Data Files are licensed under \"UNICODE, INC. LICENSE
    AGREEMENT - DATA FILES AND SOFTWARE\":
    </string>

    <string name="app_gnu_license" translatable="false">
    This program is free software: you can redistribute it and/or modify it
    under the terms of the GNU General Public License as published by the Free
    Software Foundation, either version 3 of the License, or (at your option)
    any later version.\n\nThis program is distributed in the hope that it will
    be useful, but WITHOUT ANY WARRANTY; without even the implied warranty of
    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the GNU General
    Public License for more details.\n\nYou may obtain a copy of the license at
    &lt;http://www.gnu.org/licenses/&gt;.
    </string>

    <string name="app_terms_info" translatable="false">For full terms and
    conditions, please see the full text of the GNU General Public License v3.0
    at gnu.org/licenses/gpl.html</string>

    <string name="app_unicode_license" translatable="false">
    COPYRIGHT AND PERMISSION NOTICE\n\nCopyright \u00A9 1991-2016 Unicode, Inc.
    All rights reserved.\nDistributed under the Terms of Use in
    http://www.unicode.org/copyright.html.\n\nPermission is hereby granted, free
    of charge, to any person obtaining a copy of the Unicode data files and any
    associated documentation (the \"Data Files\") or Unicode software and any
    associated documentation (the \"Software\") to deal in the Data Files or
    Software without restriction, including without limitation the rights to
    use, copy, modify, merge, publish, distribute, and/or sell copies of the
    Data Files or Software, and to permit persons to whom the Data Files or
    Software are furnished to do so, provided that either\n(a) this copyright
    and permission notice appear with all copies of the Data Files or Software,
    or\n(b) this copyright and permission notice appear in associated
    Documentation.\n\nTHE DATA FILES AND SOFTWARE ARE PROVIDED \"AS IS\",
    WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLIED, INCLUDING BUT NOT LIMITED
    TO THE WARRANTIES OF MERCHANTABILITY, FITNESS FOR A PARTICULAR PURPOSE AND
    NONINFRINGEMENT OF THIRD PARTY RIGHTS. IN NO EVENT SHALL THE COPYRIGHT
    HOLDER OR HOLDERS INCLUDED IN THIS NOTICE BE LIABLE FOR ANY CLAIM, OR ANY
    SPECIAL INDIRECT OR CONSEQUENTIAL DAMAGES, OR ANY DAMAGES WHATSOEVER
    RESULTING FROM LOSS OF USE, DATA OR PROFITS, WHETHER IN AN ACTION OF
    CONTRACT, NEGLIGENCE OR OTHER TORTIOUS ACTION, ARISING OUT OF OR IN
    CONNECTION WITH THE USE OR PERFORMANCE OF THE DATA FILES OR
    SOFTWARE.\n\nExcept as contained in this notice, the name of a copyright
    holder shall not be used in advertising or otherwise to promote the sale,
    use or other dealings in these Data Files or Software without prior written
    authorization of the copyright holder.\n
    </string>

    <string name="app_privacy_policy" translatable="false">
    The creator of Pocket CTC does not collect your data through this app. This
    includes all forms of personally identifiable information. Users of this app
    are not tracked.\n\nWebsites linked to from within the Pocket CTC app are
    subject to their own Privacy Policies. The creator of Pocket CTC is not
    responsible for any personally identifiable information tracked on these
    websites.
    </string>

</resources>
